added log table instead of mail on change price. sync button for individual product price sync

--- a/public/backend/css/pages/offer-index.css
+++ b/public/backend/css/pages/offer-index.css
@@ -1,3 +1,11 @@
 .error{
 	color: red;
 }
+@keyframes spin {
+  from { transform: rotate(0deg); }
+  to { transform: rotate(360deg); }
+}
+
+.mdi-sync.spinning::before { /* Important change */
+  animation: spin 1s linear infinite;
+}
